@@ -24,7 +24,10 @@ class msgfmt_taskgen(TaskGen.task_gen):
 			langname = lang.split('/')
 			langname = langname[-1]
 			inst_dir = langname+os.sep+'LC_MESSAGES'
-			task.install = {'var':self.inst_var,'dir':inst_dir+'/','as':self.appname+'.mo','chmod':self.chmod}
+			task.inst_var = self.inst_var
+			task.inst_dir = inst_dir+'/'
+			task.filename = self.appname+'.mo'
+			task.chmod = self.chmod
 
 def detect(conf):
 	kdeconfig = conf.find_program('kde4-config')
